--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.21.0-GA</version>
+        </dependency>
     </dependencies>
 
     <build>
